--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,7 +9,14 @@ jobs:
       - name: List Files
         run: |
           pwd
-          ls
+          ls -a
+      - name: checkout
+        uses: actions/checkout@v1
+      - name: List Files after checkout
+        run: |
+          pwd
+          ls -a
+
       - name: simple JS action
         id: greet
         uses: actions/hello-world-javascript-action@v1
