--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,6 +1,10 @@
 name: shell commands develop
 
-on: [push]
+on: #[push]
+  schedule:
+    - cron: "* * * * *"
+  pull_request:
+    types: [opened, closed]
 
 jobs:
   run-shell-command:
